2009-03-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Step-by-step inclusion of reverted patch.

	* matchbox/core/mb-wm-main-context.c: move debugging messages into
	the same part of the function.

2009-03-25  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.23

	Revert Thomas' event handler changes, because it makes HD to crash
	easily when pressing the close button. Needs more work to fix the
	issue --- maybe some handler works only because it was not called?

	* matchbox/core/mb-wm-client-window.c: Revert Thomas' transiency
	setting because it wasn't working for stackable windows, and add a
	note for it. For stackables, the transiency is set at mapping and
	unmapping time.

2009-03-24  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Event handlers now return void and cannot stop processing
	of further events.
	Accoding to Kimmo:
	Fixes NB#105014. (Kimmo: didn't quite, see above...)

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	* matchbox/comp-mgr/mb-wm-comp-mgr-xrender.c:
	* matchbox/comp-mgr/mb-wm-comp-mgr.h:
	* matchbox/core/mb-window-manager.c:
	* matchbox/core/mb-wm-decor.c:
	* matchbox/core/mb-wm-main-context.c:
	* matchbox/core/mb-wm-main-context.h:
	* matchbox/core/mb-wm-types.h:

2009-03-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Prepare the modal blocker window for possible rotateion.

2009-03-23  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.22

2009-03-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes NB#103725.

	* matchbox/core/mb-wm-client-window.c: remove warning about BadWindow
	since it is commonplace to request details of a window which has been
	unmapped since we requested it.

2009-03-21  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Refs NB#105404.
	
	* matchbox/core/mb-wm-client-window.c: newlines in window titles
	are converted to spaces.

2009-03-20  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
